--- a/index.html
+++ b/index.html
@@ -19,7 +19,21 @@
 
     <div class="container">
         <h1 class="display-1 text-center text-primary">The Grid System</h1>
-        <div class="row"></div>
+        <div class="row">
+            <div class="col-8 text-center border border-primary">Half</div>
+            <div class="col-4 text-center border border-secondary">Other half</div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-8">
+                <!-- Content-->
+            </div>
+            <div class="col-4">
+                <!-- Content-->
+            </div>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
