--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Overwrite stylesheet-->
-    <link rel="stylesheet" href="app.css">
+    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+    <!-- Overwrite stylesheet-->
+    <link rel="stylesheet" href="app.css">
 
     <title>Bootstrap Grid Demo</title>
 </head>
@@ -33,6 +35,31 @@
             <div class="col-4">
                 <!-- Content-->
             </div>
+        </div>
+    </div>
+
+    <!-- Responsive-->
+    <div class="container">
+        <h2 class="display-2 text-center text-primary">Responsive Grid</h2>
+        <div class="row">
+            <div class="col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, autem error iure
+                assumenda eveniet sint accusamus consequuntur id ab sunt nostrum voluptatem expedita eum ullam eos nihil
+                placeat a laboriosam.</div>
+            <div class="col-md-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis aperiam nisi, quod
+                dignissimos omnis illo voluptate rem est facilis beatae odio officia optio. Assumenda iure accusantium
+                natus dicta optio reiciendis!</div>
+        </div>
+
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <img class="img-fluid col-xl-4 col-lg-6 col-md-12" src="https://images.unsplash.com/photo-1652177216097-bf0eda5f61f9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDJ8eGpQUjRobGtCR0F8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
+                alt="">
+            <img class="img-fluid col-xl-4 col-lg-6 col-md-12" src="https://images.unsplash.com/photo-1652177216420-89d06cbf7190?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDF8eGpQUjRobGtCR0F8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
+                alt="">
+            <img class="img-fluid col-xl-4 col-lg-12 col-md-12" src="https://images.unsplash.com/photo-1670239510523-4bb105d27433?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDN8eGpQUjRobGtCR0F8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
+                alt="">
         </div>
     </div>
 
