--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -53,12 +53,33 @@
     </div>
 
     <div class="container">
+        <h2 class="display-2 text-center">Grid Alignment</h2>
+        <div class="row align-items-center">
+            <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, modi, officia quae
+                inventore dignissimos voluptas vero quod aliquam quibusdam sunt adipisci, voluptate eveniet. Nesciunt
+                distinctio enim impedit, natus consectetur fugiat?</div>
+            <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, modi, officia quae
+                inventore dignissimos voluptas vero quod aliquam quibusdam sunt adipisci, voluptate eveniet. Nesciunt
+                distinctio enim impedit, natus consectetur fugiat?</div>
+            <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, modi, officia quae
+                inventore dignissimos voluptas vero quod aliquam quibusdam sunt adipisci, voluptate eveniet. Nesciunt
+                distinctio enim impedit, natus consectetur fugiat?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi nobis inventore, earum quis excepturi accusamus deserunt? Quas, dolor explicabo. Itaque tempore neque unde libero eius dignissimos dolores repellat cum illo!</div>
+            <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, modi, officia quae
+                inventore dignissimos voluptas vero quod aliquam quibusdam sunt adipisci, voluptate eveniet. Nesciunt
+                distinctio enim impedit, natus consectetur fugiat?</div>
+        </div>
+    </div>
+
+    <div class="container">
         <div class="row">
-            <img class="img-fluid col-xl-4 col-lg-6 col-md-12" src="https://images.unsplash.com/photo-1652177216097-bf0eda5f61f9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDJ8eGpQUjRobGtCR0F8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
+            <img class="img-fluid col-xl-4 col-lg-6 col-md-12"
+                src="https://images.unsplash.com/photo-1652177216097-bf0eda5f61f9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDJ8eGpQUjRobGtCR0F8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
                 alt="">
-            <img class="img-fluid col-xl-4 col-lg-6 col-md-12" src="https://images.unsplash.com/photo-1652177216420-89d06cbf7190?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDF8eGpQUjRobGtCR0F8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
+            <img class="img-fluid col-xl-4 col-lg-6 col-md-12"
+                src="https://images.unsplash.com/photo-1652177216420-89d06cbf7190?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDF8eGpQUjRobGtCR0F8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
                 alt="">
-            <img class="img-fluid col-xl-4 col-lg-12 col-md-12" src="https://images.unsplash.com/photo-1670239510523-4bb105d27433?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDN8eGpQUjRobGtCR0F8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
+            <img class="img-fluid col-xl-4 col-lg-12 col-md-12"
+                src="https://images.unsplash.com/photo-1670239510523-4bb105d27433?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDN8eGpQUjRobGtCR0F8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
                 alt="">
         </div>
     </div>
