bootstrap justify-content

--- a/index.html
+++ b/index.html
@@ -63,10 +63,22 @@
                 distinctio enim impedit, natus consectetur fugiat?</div>
             <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, modi, officia quae
                 inventore dignissimos voluptas vero quod aliquam quibusdam sunt adipisci, voluptate eveniet. Nesciunt
-                distinctio enim impedit, natus consectetur fugiat?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi nobis inventore, earum quis excepturi accusamus deserunt? Quas, dolor explicabo. Itaque tempore neque unde libero eius dignissimos dolores repellat cum illo!</div>
+                distinctio enim impedit, natus consectetur fugiat?Lorem ipsum dolor sit amet, consectetur adipisicing
+                elit. Sequi nobis inventore, earum quis excepturi accusamus deserunt? Quas, dolor explicabo. Itaque
+                tempore neque unde libero eius dignissimos dolores repellat cum illo!</div>
             <div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, modi, officia quae
                 inventore dignissimos voluptas vero quod aliquam quibusdam sunt adipisci, voluptate eveniet. Nesciunt
                 distinctio enim impedit, natus consectetur fugiat?</div>
+        </div>
+    </div>
+
+    <div class="container">
+        <h2 class="display-2">Justify Content</h2>
+        <div class="row border">
+            <div class="col">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque aliquam vero veritati
+            </div>
+            <div class="col">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque aliquam vero veritati
+            </div>
         </div>
     </div>
 
